--- a/README
+++ b/README
@@ -4,3 +4,7 @@
 
 ууправление на пк - стрелочки
 ууправление на мобильных устройствах - свайпы
+
+https://yaquz.ru/ - сайт игры
+
+https://t.me/snakegamebykly_bot/Snake - мини-приложение телеграмм 
